<resources>

    <string name="app_name">Story App Final</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="upload">Upload</string>
    <string name="overview">Overview</string>
    <string name="created_at">Created at</string>
    <string name="posted_by">Posted by</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="time_out">Time out</string>
    <string name="retry">Retry</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>


    <string name="masuk">Masuk</string>
    <string name="keluar">Keluar</string>
    <string name="daftar">Daftar</string>

    <string name="post_dengan_lokasi">Post dengan lokasi</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masukan_dulu_datamu_ya">Masukan dulu datamu ya</string>
    <string name="sudah_siap_untuk_berbagi_cerita">Sudah siap untuk berbagi cerita?</string>
    <string name="lengkapi_data_dirimu_di_bawah_ini">Lengkapi data dirimu di bawah ini</string>


    <string name="logo_image_login">Logo image login</string>
    <string name="logo_image_register">Logo image register</string>
    <string name="logo_image_item">Logo image item</string>
    <string name="logo_image_detail">Logo image detail</string>
    <string name="logo_image_preview_upload">Logo image preview upload</string>

</resources>