<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_posted_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posted_by"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginStart="12dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_posted_by"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/logo_image_item"
            android:layout_marginTop="8dp"
            android:src="@drawable/person_24"
            app:layout_constraintTop_toBottomOf="@+id/name_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/image_item"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/description_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_at"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/description_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>