<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/detail_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/person_24"
            android:contentDescription="@string/logo_image_detail"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/detail_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_at"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>